--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+
+    .sora {
+      font-family: "Sora", serif;
+    }
+  </style>
 </head>
 
-<body>
+<body class="sora bg-gray-50">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
